--- a/Changes
+++ b/Changes
@@ -1,10 +1,14 @@
 Revision history for perl module App::TLSMe
 
-0.009003
+0.009004 2012-01-12
+
+ - Mostly distribution improvements
+
+0.009003 2012-01-08
 
  - Test improvement
 
-0.009002
+0.009002 2012-01-05
 
  - Better handles closing
  - Added 'method' option (as in AnyEvent::TLS "SSLv2" | "SSLv3" | "TLSv1" | "any")
